# sonar

./: CMakeLists.txt  README.md  build.sh  coordinate.cpp  coordinate.h  directionreader.cpp  directionreader.h  distancereader.cpp  distancereader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  randomdistancereader.cpp  randomdistancereader.h  robot.cpp  robot.h  simulation.cpp  simulation.h  sonardistancereader.cpp  sonardistancereader.h
.github/workflows/: c-cpp.yml
tests/: CMakeLists.txt  directionreadertest.cpp  randomdistancereadertest.cpp
